src/test/deca/context/valid/wobj/test_print_int.deca
// Description:
//    Programme minimaliste utilisant print de int.
//
// Resultats:
//    Affichage de 12
//
// Historique:
//    cree le 01/01/2024

{
    print(12);
}
