src/test/deca/context/invalid/obj/declparam/test_param_already_used.deca
// Description:
//    Le paramètre a est utilisé deux fois
//
// Resultats:
//   Paramètre dèjà utilisé
// 
// Historique:
//    cree le 01/01/2024

class A{
    int a;
    void b(int a, int a){
    }
}
